--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<p>CAMERON PARIS</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>New Orleans, October 2016: First Trip As A Couple</title>
+    </head>
+    <body>
+        <header>
+            <h1>The Best of New Orleans</h1>
+            <nav>
+                <li> <a href="#bourbon_st">Bourbon Street</a></li>
+                <li> <a href="#cafe_du_monde">Caf&eacute; Du Monde</a></li>
+                <li> <a href="#the_french_market">The French Market</a></li>
+                <li> <a href="#the_garden_district">The Garden District</a></li>
+                <li> <a href="#the_arts_district">The Arts District</a></li>
+                <li> <a href="#mother's">Mother's Restaurant</a></li>
+                <li> <a href="#k-paul's">K-Paul's Louisiana Kitchen</a></li>
+            </nav>
+        </header>
+
+        <main>
+        </main>
+
+        <footer>
+        </footer>
+    </body>
+
+</html>
