Removed Arts District from header. Added Mother's Restaurant section.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
                 <li> <a href="#cafe_du_monde">Caf&eacute; Du Monde</a></li>
                 <li> <a href="#the_french_market">The French Market</a></li>
                 <li> <a href="#the_garden_district">The Garden District</a></li>
-                <li> <a href="#the_arts_district">The Arts District</a></li>
                 <li> <a href="#mother's">Mother's Restaurant</a></li>
                 <li> <a href="#k-paul's">K-Paul's Louisiana Kitchen</a></li>
             </nav>
@@ -55,7 +54,16 @@
                     <figcaption>A typical home in the famed New Orleans Garden District.</figcaption>
                 </figure>
             </section>
-            
+            <section>
+                <a name="mother's"></a>
+                <h3>Mother's Restaurant</h3>
+                <p>Mother's is a New Orlean's institution, founded in 1938 and operating in the same location since. It was originally owned by Simon and Mary (Mother) Landry, and became famous for the po' boys that their family served there. In 1986, the business was sold to John and Jerry Amato; they expanded the menu to offer traditional New Orleans dishes such as crawfish etouf&eacute;e and jambalaya, while retaining crowd-pleasers like the Ferdi Special and debris po' boy. For an eating experience that's hard to top, you can't go wrong with Mother's. Be prepared to wait, as lines are often out the door but always worth it. </p>
+                <figure>
+                    <img src="https://media.xogrp.com/images/370c0905-26e6-495f-a57c-5fd34c9abdff" alt="Mother's Restaurant, arguably the best counter-service available anywhere." />
+                    <figcaption>Mother's Restaurant, arguably the best counter-service available anywhere.</figcaption>
+                </figure>
+            </section>
+
         </main>
 
         <footer>
