Added link to css file; typo corrections

--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
     <head>
         <title>New Orleans, October 2016: First Trip As A Couple</title>
+
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <h1>The Best of New Orleans</h1>
             <nav>
-                <li> <a href="#bourbon_st">Bourbon Street</a></li>
-                <li> <a href="#cafe_du_monde">Caf&eacute; Du Monde</a></li>
-                <li> <a href="#the_french_market">The French Market</a></li>
-                <li> <a href="#the_garden_district">The Garden District</a></li>
-                <li> <a href="#mother's">Mother's Restaurant</a></li>
-                <li> <a href="#k-paul's">K-Paul's Louisiana Kitchen</a></li>
+                <ul>
+                    <li> <a href="#bourbon_st">Bourbon Street</a></li>
+                    <li> <a href="#cafe_du_monde">Caf&eacute; Du Monde</a></li>
+                    <li> <a href="#the_french_market">The French Market</a></li>
+                    <li> <a href="#the_garden_district">The Garden District</a></li>
+                    <li> <a href="#mother's">Mother's Restaurant</a></li>
+                    <li> <a href="#k-paul's">K-Paul's Louisiana Kitchen</a></li>
+                </ul>
             </nav>
         </header>
 
@@ -21,7 +25,7 @@
                 <section>
                     <a name="bourbon_st"></a>
                     <h3>Bourbon Street</h3>
-                    <p>A culmination of layered histories of architectural and cultural influences, Bourbon Street travels athe 13 blocks between Esplanade Ave on the eastern end and Canal street on the western end. One of the original streets laid out in 1721 under the direction of the French royal engineer, Adrien de Pauger, it was originally dubbed Rue Bourbon, in keeping with the use of Catholic saints and French royal houses as naming sources. New Orleans remained a French territory until 1763, when it was transferred to the Spanish in the aftermath of the Seven Year's War. Approximately 80% of the city's buildings were subqequently destroyed in 1788 as a result of a massive fire that devastated the city. Consequently, Bourbon Street(Calle De Borbon at the time), as well as the surrounding French Quarter, ironically bear more signs of Spanish influence than French. Following the Louisiana Purchase in 1803, Bourbon Street took on the name we recognize today. Although a premier residential neighborhood until 1900, Bourbon Street underwent the early stages of its transformation into the party destination it is known as today as a result of the late 1800's construction of the Storyville Red Light District on nearby Basin Street. The ensuing associations with alcohol-fueled, risqu&eacute; pursuits have remained a persistent element of the historic thoroughfare's reputation through the current day.</p>
+                    <p>A culmination of layered histories of architectural and cultural influences, Bourbon Street travels the 13 blocks between Esplanade Ave on the eastern end and Canal street on the western end. One of the original streets laid out in 1721 under the direction of the French royal engineer, Adrien de Pauger, it was originally dubbed Rue Bourbon, in keeping with the use of Catholic saints and French royal houses as naming sources. New Orleans remained a French territory until 1763, when it was transferred to the Spanish in the aftermath of the Seven Year's War. Approximately 80% of the city's buildings were subqequently destroyed in 1788 as a result of a massive fire that devastated the city. Consequently, Bourbon Street(Calle De Borbon at the time), as well as the surrounding French Quarter, ironically bear more signs of Spanish influence than French. Following the Louisiana Purchase in 1803, Bourbon Street took on the name we recognize today. Although a premier residential neighborhood until 1900, Bourbon Street underwent the early stages of its transformation into the party destination it is known as today as a result of the late 1800's construction of the Storyville Red Light District on nearby Basin Street. The ensuing associations with alcohol-fueled, risqu&eacute; pursuits have remained a persistent element of the historic thoroughfare's reputation through the current day.</p>
                     <figure>
                         <img src="https://c1.staticflickr.com/6/5075/7206834548_001ac24745_b.jpg" alt="A view down Bourbon Street on a foggy day." />
                         <figcaption>A view down Bourbon Street on a foggy day.</figcaption>
