Added link to normalize css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>New Orleans, October 2016: First Trip As A Couple</title>
 
+        <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <header>
